--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"test": "vitest run",
+		"test": "vitest run --coverage.enabled --coverage.reporter='text-summary'",
 		"lint": "eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"eslint": "8.43.0",
-		"eslint-config-prettier": "8.8.0",
 		"@typescript-eslint/eslint-plugin": "5.60.0",
 		"@typescript-eslint/parser": "5.60.0",
+		"@vitest/coverage-v8": "0.32.2",
+		"eslint": "8.43.0",
+		"eslint-config-prettier": "8.8.0",
 		"prettier": "2.8.8",
 		"typescript": "5.1.3",
 		"vitest": "0.32.2"
 	},
-	"type": "module",
-	"dependencies": {}
+	"type": "module"
 }
