--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
 	"scripts": {
 		"test": "vitest run --coverage.enabled --coverage.reporter='text-summary'",
 		"lint": "eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "5.60.1",
-		"@typescript-eslint/parser": "5.60.1",
-		"@vitest/coverage-v8": "0.32.2",
-		"eslint": "8.43.0",
+		"@typescript-eslint/eslint-plugin": "5.61.0",
+		"@typescript-eslint/parser": "5.61.0",
+		"@vitest/coverage-v8": "0.33.0",
+		"eslint": "8.44.0",
 		"eslint-config-prettier": "8.8.0",
-		"prettier": "2.8.8",
+		"prettier": "3.0.0",
 		"typescript": "5.1.6",
-		"vitest": "0.32.2"
+		"vitest": "0.33.0"
 	},
 	"type": "module"
 }
